# scripts

./: .gitignore  CHANGELOG.md  README.md  cloudsmith_job.sh  install.sh  install_scripts.py  install_tools.py  packages.json  pyproject.toml
flutter/: f_riverpod_notifier.py  pub-upgrade.py  pub_publish.py  pub_upgrade.py  pub_version_upgrade.py
tools/: credentials.ini  script_tools.py
