[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "script_tools"
version = "0.1.0"
description = "A brief description for the yuScripts package."
readme = "README.md"
requires-python = ">=3.7"
license = {text = "MIT"}
authors = [
    { name = "flywithbug", email = "flywithbug@gmail.com" }
]

urls = [
    {Homepage = "https://github.com/flywithbug/scripts.git"}
]

classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent"
]
dependencies = [
    # 在此添加项目依赖，例如："requests>=2.25.0"
]

# 如需要定义命令行脚本，可取消下面的注释并配置对应入口函数
#[project.scripts]
#yu-scripts = "yuScripts.__main__:main"
